[gd_scene load_steps=20 format=3 uid="uid://347bjqebrfuc"]

[ext_resource type="PackedScene" uid="uid://cv22prpdnr1j8" path="res://scenes/pad.tscn" id="1_ax4r2"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_hv8p6"]
[ext_resource type="PackedScene" uid="uid://3gys21iysaug" path="res://scenes/hud.tscn" id="2_oyyub"]
[ext_resource type="PackedScene" uid="uid://b4ydfjf7530jy" path="res://scenes/ball.tscn" id="2_v4fem"]
[ext_resource type="Shader" path="res://shaders/color_mask.gdshader" id="4_82t8t"]
[ext_resource type="PackedScene" uid="uid://hsfwrquxcrj2" path="res://scenes/wall.tscn" id="4_ba4t7"]
[ext_resource type="PackedScene" uid="uid://c8eox0k6tdhmj" path="res://scenes/zone.tscn" id="5_cpam5"]
[ext_resource type="Shader" path="res://shaders/chroma.gdshader" id="5_hfbio"]
[ext_resource type="Texture2D" uid="uid://dxfdyqmhl3icl" path="res://assets/background-4.png" id="5_qdl82"]
[ext_resource type="Texture2D" uid="uid://br6mi4yr3geud" path="res://icon.svg" id="6_6evj5"]
[ext_resource type="PackedScene" uid="uid://cyfhali0amqjo" path="res://scenes/attractor.tscn" id="7_pn1u0"]
[ext_resource type="PackedScene" uid="uid://cunfceads5dtm" path="res://scenes/repulsor.tscn" id="8_g5vfy"]
[ext_resource type="AudioStream" uid="uid://6aphhhscv865" path="res://assets/ambience1.mp3" id="10_q1oxq"]
[ext_resource type="AudioStream" uid="uid://bcbjasvfsg74k" path="res://assets/scifi3.mp3" id="11_p52ag"]
[ext_resource type="AudioStream" uid="uid://dgjw50upybx88" path="res://assets/scifi2.mp3" id="12_gqge4"]
[ext_resource type="AudioStream" uid="uid://c3yekwk7eun17" path="res://assets/scifi1.mp3" id="13_thv7v"]
[ext_resource type="AudioStream" uid="uid://ce4t47gbrulj8" path="res://assets/score.mp3" id="14_kf1a3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2tn7i"]
shader = ExtResource("4_82t8t")
shader_parameter/mask_color = Color(0.0117189, 0.0273442, 0.191974, 1)
shader_parameter/new_color = Color(0.0140432, 0.0284465, 0.17507, 1)
shader_parameter/threshold = 0.05

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7mkm1"]
resource_local_to_scene = true
shader = ExtResource("5_hfbio")
shader_parameter/r_displacement = Vector2(1, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(-1, 0)

[node name="Main" type="Node2D"]
script = ExtResource("1_hv8p6")
ball_scene = ExtResource("2_v4fem")

[node name="HUD" parent="." instance=ExtResource("2_oyyub")]

[node name="Sounds" type="Node" parent="."]

[node name="BallSound3" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("11_p52ag")

[node name="BallSound2" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("12_gqge4")

[node name="BallSound1" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("13_thv7v")

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("14_kf1a3")

[node name="Background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_2tn7i")
position = Vector2(1000, 600)
texture = ExtResource("5_qdl82")

[node name="Borders" type="Node" parent="."]

[node name="WallTop" parent="Borders" instance=ExtResource("4_ba4t7")]
position = Vector2(0, -24)
metadata/_edit_group_ = true

[node name="RepTop" parent="Borders" instance=ExtResource("8_g5vfy")]
position = Vector2(0, -12)
gravity_point_center = Vector2(0, -1)
gravity_direction = Vector2(0, -1)

[node name="WallBottom" parent="Borders" instance=ExtResource("4_ba4t7")]
position = Vector2(1920, 1104)
rotation = 3.14159
metadata/_edit_group_ = true

[node name="RepBottom" parent="Borders" instance=ExtResource("8_g5vfy")]
position = Vector2(1920, 1088)
rotation = -3.14159

[node name="ZoneLeft" parent="Borders" instance=ExtResource("5_cpam5")]
position = Vector2(-64, -64)
metadata/_edit_group_ = true

[node name="ZoneRight" parent="Borders" instance=ExtResource("5_cpam5")]
position = Vector2(1920, -64)
metadata/_edit_group_ = true

[node name="PadLeft" parent="." instance=ExtResource("1_ax4r2")]
position = Vector2(80, 520)
TYPE = 0
SIDE = "left"

[node name="PadRight" parent="." instance=ExtResource("1_ax4r2")]
position = Vector2(1832, 544)
SIDE = "right"

[node name="Attractor" parent="." instance=ExtResource("7_pn1u0")]
position = Vector2(960, 544)
gravity = 1900.0

[node name="Audio" type="AudioStreamPlayer2D" parent="Attractor"]
stream = ExtResource("10_q1oxq")
volume_db = -9.957

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
position = Vector2(-24, 72)
scale = Vector2(0.22, 0.21)
copy_mode = 2
rect = Rect2(400, 200, 400, 400)

[node name="Abberation" type="TextureRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_7mkm1")
offset_left = -24.0
offset_top = -40.0
offset_right = 1936.0
offset_bottom = 1120.0
texture = ExtResource("6_6evj5")

[node name="BackBufferCopy2" type="BackBufferCopy" parent="."]
position = Vector2(-979.104, -680.597)
scale = Vector2(1.49254, 1.49254)
copy_mode = 2

[connection signal="can_launch_ball" from="HUD" to="." method="_on_hud_can_launch_ball"]
